minor fix layout issue

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
 
 a {
   text-decoration: none;
-  color: rgb(0, 0, 0;
+  color: black;
   background: rgba(226, 222, 191, 0.8);
   padding: 2px 5px;
   border-radius: 8px;
